# env-guard

./: README.md  pyproject.toml
src/env_guard/: __init__.py  cli.py  constants.py  git_checker.py  gitignore_validator.py  integrator.py  models.py  reporter.py  scanner.py
tests/: __init__.py  test_gitignore_validator.py  test_integrator.py
